--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 body{
     font-family: "Playfair Display SC", serif;
     background: blanchedalmond
-    color: darkseagreen
+    color chocolate;
+    margin: 0px;
+    margin-bottom: 100px;
 }
+.chamaA
