--- a/style.css
+++ b/style.css
@@ -5,4 +5,22 @@ body{
     margin: 0px;
     margin-bottom: 100px;
 }
-.chamaA
+.chamada{
+    background: white;
+    display: flex;
+    justify-content: center;
+    margin-top: 80px;
+    margin-bottom: 80px;
+}
+header{
+    font-size: 40px;
+    color: plum;
+    border-bottom: 3px solid plum;
+    padding: 20px;
+}
+h1{
+    font-size: 35px;
+}
+.chamada-texto{
+margin-right: 5%;
+}
